(Develop): Added functionality for reading metadata

--- a/src/ml_notebooks/stac/stac.ipynb
+++ b/src/ml_notebooks/stac/stac.ipynb
@@ -11,12 +11,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "601f60c8-552f-4198-890b-df89ce002159",
+   "metadata": {},
+   "source": [
+    "### Import Dependencies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "8d694998-db0f-4ea2-9fa3-4a5d560375c9",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import python packages\n",
     "import pystac\n",
     "import os\n",
     "import json\n",
@@ -25,44 +34,25 @@
     "import rasterio\n",
     "from tempfile import TemporaryDirectory\n",
     "from pathlib import Path\n",
-    "import typing"
+    "import typing\n",
+    "\n",
+    "# Define core repository directories\n",
+    "ROOT_DIR = Path(os.getcwd()).parents[2]\n",
+    "ASSETS_DIR = os.path.join(ROOT_DIR, \"assets/\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "c6787adc-144c-4106-9ea9-c16f2ef3a6ac",
+   "cell_type": "markdown",
+   "id": "c5ecf464-d3a4-4009-9995-713193dd26df",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1.0.0'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "pystac.get_stac_version()"
+    "### Initialize Catalog"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "aac397b3-4281-47aa-809f-30aff0fb23ca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "catalog = pystac.Catalog(id='sample-catalog', description='Simple STAC catalog.')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "b01f35e9-ebba-4adf-bc4c-fd9289d088a6",
    "metadata": {},
    "outputs": [
     {
@@ -75,9 +65,154 @@
     }
    ],
    "source": [
+    "catalog = pystac.Catalog(id='overstory-stac', description='Overstory STAC Catalog.')\n",
     "print(list(catalog.get_all_items()))\n",
     "print(list(catalog.get_children()))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "420dee4b-198c-44e8-b8c2-b8b339c0133f",
+   "metadata": {},
+   "source": [
+    "### Read `manifest.json` Metadata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "18a7e382-80d3-474a-a3f3-7dfab41138b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20210425_100412_ssc3_u0001\n",
+      "{'acquired': '2021-04-25T10:04:12.75Z', 'clear_confidence_percent': 91, 'clear_percent': 93, 'cloud_cover': 0, 'cloud_percent': 0, 'ground_control_ratio': 1, 'gsd': 0.81, 'heavy_haze_percent': 0, 'item_type': 'SkySatCollect', 'light_haze_percent': 0, 'pixel_resolution': 0.5, 'provider': 'skysat', 'published': '2021-04-25T14:18:33Z', 'publishing_stage': 'finalized', 'quality_category': 'standard', 'satellite_azimuth': 35.7, 'satellite_id': 'SSC3', 'shadow_percent': 3, 'snow_ice_percent': 0, 'strip_id': 's103_20210425T100412Z', 'sun_azimuth': 145.6, 'sun_elevation': 51.7, 'updated': '2021-09-11T06:44:43Z', 'view_angle': 28.3, 'visible_confidence_percent': 78, 'visible_percent': 96}\n",
+      "20210425_100412_ssc3_u0002\n",
+      "{'acquired': '2021-04-25T10:04:12.75Z', 'clear_confidence_percent': 91, 'clear_percent': 93, 'cloud_cover': 0, 'cloud_percent': 0, 'ground_control_ratio': 1, 'gsd': 0.8, 'heavy_haze_percent': 0, 'item_type': 'SkySatCollect', 'light_haze_percent': 0, 'pixel_resolution': 0.5, 'provider': 'skysat', 'published': '2021-04-25T14:18:33Z', 'publishing_stage': 'finalized', 'quality_category': 'standard', 'satellite_azimuth': 35.7, 'satellite_id': 'SSC3', 'shadow_percent': 3, 'snow_ice_percent': 0, 'strip_id': 's103_20210425T100412Z', 'sun_azimuth': 145.6, 'sun_elevation': 51.8, 'updated': '2021-09-11T06:44:44Z', 'view_angle': 26.7, 'visible_confidence_percent': 78, 'visible_percent': 96}\n"
+     ]
+    }
+   ],
+   "source": [
+    "item_ids = [\n",
+    "         '20210425_100412_ssc3_u0001',\n",
+    "         '20210425_100412_ssc3_u0002',\n",
+    "]\n",
+    "    \n",
+    "# Helper function to read .json files\n",
+    "def load_item_metadata(file):\n",
+    "    with open(file, \"r\") as f:\n",
+    "        data = json.load(f)\n",
+    "        return data\n",
+    "\n",
+    "# Loop through each item\n",
+    "for item_id in item_ids:\n",
+    "    \n",
+    "    manifest_file = os.path.join(ASSETS_DIR, item_id, 'files', 'SkySatCollect', item_id, f'{item_id}_metadata.json') \n",
+    "    manifest_data = dict(load_item_metadata(manifest_file))\n",
+    "    \n",
+    "    print(manifest_data['id'])\n",
+    "    print(manifest_data['properties'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "4227fbb1-3544-4440-b999-c9cd1078406d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "7ee077c5-f5cc-49e0-ae69-b54e4bfb0553",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/alex/github_repos/ml-notebooks/assets/'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ASSETS_DIR"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62b5b74d-29eb-4845-b6a4-97d17ed460a4",
+   "metadata": {},
+   "source": [
+    "### Read Items"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f373e79-c322-4e36-a5dc-37d3bbadc840",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def store_item_metadata(order_id, metadata_folder_name, item_type, item_ids):\n",
+    "    \"\"\"Store items for metadata.\n",
+    "    \n",
+    "    Args:\n",
+    "        order_id (): example \"20210425_100412_ssc3_u0001\"\n",
+    "    \n",
+    "    \"\"\"\n",
+    "   \n",
+    "    # Get previous Planet order results with the order id associated with the order\n",
+    "    current_order = planet_orders_url + '/' + order_id\n",
+    "    order_response = requests.get(current_order, auth=planet_auth)\n",
+    "    order_response.status_code\n",
+    "    order_results = order_response.json()['_links']['results']\n",
+    " \n",
+    "\n",
+    "    # List of metadata json file names from the selected items from the order\n",
+    "    file_names = [file_name := order_id + '/' +  item_type + '/' + item_id + '_metadata.json' for item_id in item_ids]\n",
+    "\n",
+    "    \n",
+    "    # Create folder to store metadata if the folder does not already exist\n",
+    "    metadata_folder = Path.cwd() / metadata_folder_name\n",
+    "    try:\n",
+    "        metadata_folder.mkdir(parents=True, exist_ok=False)\n",
+    "    except FileExistsError as err:\n",
+    "        print(\"Directory already exists\")\n",
+    "    \n",
+    "    file_paths = []\n",
+    "    for result in order_results:\n",
+    "        if result['name'] in file_names:\n",
+    "            json_file = result['location']\n",
+    "            metadata_path = Path.joinpath(metadata_folder).joinpath(result[\"name\"])   \n",
+    "            file_paths.append(str(metadata_path))\n",
+    "            metadata_path.parent.mkdir(parents=True, exist_ok=True)\n",
+    "            item_metadata_download = requests.get(json_file, allow_redirects=True)\n",
+    "            open(metadata_path, 'wb').write(item_metadata_download.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1de5569f-b5cd-41d2-9d5d-93b108f2487b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95476c66-1eff-4de8-a604-570e65229fe3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
