(Develop): Added functionality for reading metadata

--- a/src/ml_notebooks/stac/stac.ipynb
+++ b/src/ml_notebooks/stac/stac.ipynb
@@ -118,32 +118,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "4227fbb1-3544-4440-b999-c9cd1078406d",
+   "cell_type": "markdown",
+   "id": "5562b50f-a450-4de3-af47-2bb11759baa3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Create STAC Items"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "id": "7ee077c5-f5cc-49e0-ae69-b54e4bfb0553",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'/home/alex/github_repos/ml-notebooks/assets/'"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'shapely'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_847319/1741693615.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mrasterio\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarp\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcalculate_default_transform\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mshapely\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgeometry\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mPolygon\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmapping\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mdatetime\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mitertools\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mislice\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'shapely'"
+     ]
     }
    ],
    "source": [
-    "ASSETS_DIR"
+    "from rasterio.warp import calculate_default_transform\n",
+    "from shapely.geometry import Polygon, mapping\n",
+    "from datetime import datetime\n",
+    "from itertools import islice"
    ]
   },
   {
@@ -152,114 +156,6 @@
    "metadata": {},
    "source": [
     "### Read Items"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7f373e79-c322-4e36-a5dc-37d3bbadc840",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def store_item_metadata(order_id, metadata_folder_name, item_type, item_ids):\n",
-    "    \"\"\"Store items for metadata.\n",
-    "    \n",
-    "    Args:\n",
-    "        order_id (): example \"20210425_100412_ssc3_u0001\"\n",
-    "    \n",
-    "    \"\"\"\n",
-    "   \n",
-    "    # Get previous Planet order results with the order id associated with the order\n",
-    "    current_order = planet_orders_url + '/' + order_id\n",
-    "    order_response = requests.get(current_order, auth=planet_auth)\n",
-    "    order_response.status_code\n",
-    "    order_results = order_response.json()['_links']['results']\n",
-    " \n",
-    "\n",
-    "    # List of metadata json file names from the selected items from the order\n",
-    "    file_names = [file_name := order_id + '/' +  item_type + '/' + item_id + '_metadata.json' for item_id in item_ids]\n",
-    "\n",
-    "    \n",
-    "    # Create folder to store metadata if the folder does not already exist\n",
-    "    metadata_folder = Path.cwd() / metadata_folder_name\n",
-    "    try:\n",
-    "        metadata_folder.mkdir(parents=True, exist_ok=False)\n",
-    "    except FileExistsError as err:\n",
-    "        print(\"Directory already exists\")\n",
-    "    \n",
-    "    file_paths = []\n",
-    "    for result in order_results:\n",
-    "        if result['name'] in file_names:\n",
-    "            json_file = result['location']\n",
-    "            metadata_path = Path.joinpath(metadata_folder).joinpath(result[\"name\"])   \n",
-    "            file_paths.append(str(metadata_path))\n",
-    "            metadata_path.parent.mkdir(parents=True, exist_ok=True)\n",
-    "            item_metadata_download = requests.get(json_file, allow_redirects=True)\n",
-    "            open(metadata_path, 'wb').write(item_metadata_download.content)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1de5569f-b5cd-41d2-9d5d-93b108f2487b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "95476c66-1eff-4de8-a604-570e65229fe3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "b5210d3b-b248-4a9b-8cb7-928112e7a305",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests\n",
-    "from requests.auth import HTTPBasicAuth\n",
-    "import json\n",
-    "\n",
-    "## Get Planet API key stored as an environment variable on your system\n",
-    "PLANET_API_KEY = os.getenv('PLANET_API_KEY')\n",
-    "\n",
-    "## HTTP Basic Authentication\n",
-    "planet_auth = HTTPBasicAuth(PLANET_API_KEY, '')\n",
-    "\n",
-    "# set content type to json\n",
-    "headers = {'content-type': 'application/json'}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "61bd2823-da19-40ad-9d0c-3cc66028d74e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Base Order URL\n",
-    "planet_orders_url = 'https://api.planet.com/compute/ops/orders/v2'\n",
-    "\n",
-    "# order id\n",
-    "order_id = 'cb363b75-b4e4-46f1-8d32-0ef87afb6215'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "96277a0a-1545-4932-8dce-ea046b3725e3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "item_ids = [\n",
-    "         '20210515_145754_03_245c',\n",
-    "         '20210514_145807_70_2455',\n",
-    "]"
    ]
   },
   {
