(Dev): removed .json from gitignore, restructured files.

--- a/src/ml_notebooks/stac/stac.ipynb
+++ b/src/ml_notebooks/stac/stac.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 1,
    "id": "8d694998-db0f-4ea2-9fa3-4a5d560375c9",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "id": "18a7e382-80d3-474a-a3f3-7dfab41138b7",
    "metadata": {},
    "outputs": [],
@@ -144,17 +144,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "id": "d996c7ae-e3d1-44fd-a22c-33324294b233",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_STAC_Item(tiff_path: str, metadata_json: Dict) -> Tuple[List[str], Tuple]:\n",
+    "def create_STAC_Item(tiff_path: str, metadata_json: Dict) -> Tuple[pystac.Item, Tuple]:\n",
     "    \"\"\"Creates a STAC item.\n",
     "    \n",
     "    Args:\n",
-    "        tiff_path (str): path to the .tif file\n",
-    "        metadata_json (Dict): dict content of metadata.json file\n",
+    "        tiff_path (str): path to the COG file.\n",
+    "        metadata_json (Dict): dict content of metadata.json file.\n",
     "        \n",
     "    Returns:\n",
     "        List of STAC items.\n",
@@ -181,11 +181,11 @@
     "        \n",
     "        # Instantiate pystac item\n",
     "        item = pystac.Item(id=metadata_json[\"id\"],\n",
-    "             geometry=geom,\n",
-    "             bbox=bbox,\n",
-    "             datetime = time_acquired,\n",
-    "             properties={\n",
-    "             })\n",
+    "                             geometry=geom,\n",
+    "                             bbox=bbox,\n",
+    "                             datetime = time_acquired,\n",
+    "                             properties={\n",
+    "        })\n",
     "\n",
     "        # Use Planet metadata.json to add some common metadata to the STAC item\n",
     "        metadata_properties = metadata_json[\"properties\"]\n",
@@ -212,9 +212,7 @@
     "    # holding the bounding box, geojson polygon, and date the item was acquired\n",
     "    return item, (item_extent_info)\n",
     "\n",
-    "def create_STAC_Items(\n",
-    "    item_ids: List[str],\n",
-    ") -> List[Tuple]:\n",
+    "def create_STAC_Items(item_ids: List[str]) -> List[Tuple]:\n",
     "    \"\"\" Create STAC Items.\n",
     "    \n",
     "    Args:\n",
