(Docs): Added disclaimer to exploration dataset

--- a/src/ml_notebooks/stac/explore_data.ipynb
+++ b/src/ml_notebooks/stac/explore_data.ipynb
@@ -17,6 +17,8 @@
     "1. Visualization\n",
     "2. Interpretation\n",
     "\n",
+    "This code is _highly_ borrowed from sources online!\n",
+    "\n",
     "## Install Dependencies"
    ]
   },
